It's my latest update

--- a/Q3.html
+++ b/Q3.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documents</title>
+    <title>Find Square Root of any number</title>
 </head>
 <body>
-    
+   <script>
+    var a = 289;
+    var findSQRT = Math.sqrt(a);
+    console.log(findSQRT);
+
+   </script>
 </body>
 </html>
