--- a/Q4.html
+++ b/Q4.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS first program</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hii It is first program.</h1>
-    <div class="box">
-        Hey, it is a box div.
-    </div>
+    <script>
+        
+    </script>
 </body>
 </html>
