--- a/Q4.html
+++ b/Q4.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculate Area of Triangle</title>
 </head>
 <body>
     <script>
-        
+        let breadth = parseInt(prompt("Enter Breadth : "));
+        let height = parseInt(prompt("Enter Height : "));
 
-
-        
+        let AreaOfTriangle = 1/2*breadth*height;
+        console.log(AreaOfTriangle);
+        document.write(AreaOfTriangle);
     </script>
 </body>
 </html>
